[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infer_rvc_python"
version = "1.2.0"
description = "Python wrapper for fast inference with RVC"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "R3gm", email = "r3gm@example.com"}
]
keywords = ["rvc", "voice-conversion", "inference", "audio", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "omegaconf>=2.0.6",
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "torchaudio>=2.3.1",
    "faiss-cpu>=1.7.3",
    "einops>=0.8.0",
    "librosa>=0.10.2",
    "praat-parselmouth",
    "soundfile>=0.13.0",
    "numpy>=1.25.2,<2.0.0",
    "numba>=0.57.0",
    "scipy>=1.15.0",
    "requests>=2.32.3",
    "aiohttp",
    "ffmpy==0.3.1",
    "ffmpeg-python>=0.2.0",
]

[project.optional-dependencies]
all = [
    "yt-dlp",
    "edge-tts",
]
dev = [
    "pytest>=7.0.0",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/BF667/infer_rvc_python"
Repository = "https://github.com/BF667/infer_rvc_python.git"
Issues = "https://github.com/BF667/infer_rvc_python/issues"

[project.scripts]
infer-rvc = "infer_rvc_python.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
infer_rvc_python = ["*.txt", "*.rep", "*.pickle"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
